2003-03-31  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/kb.h :

	  - Fixed add_transtab(). 

	  - verify_atom() now checks both ground and non-ground atoms.

	* kb/transtab.cpp :

	  - cmp() function will now return true if only the name matches.


2003-03-28  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/Makefile.in :

	  - Fixed dependencies.

	* kb/transtab.h :
	* kb/transtab.cpp :

	  - Added a table for storing transformation declarations.

	* kb/consttab.h :
	* kb/consttab.cpp :

	  - Now stores expressions instead of an integer list.

	* kb/kb.h :
	* kb/kb.cpp :

	  - Fixed stages.

	* kb/kb.h :
	* kb/kb.cpp :
	* parser/parser.y :

	  - Added support for storing constraints.

	* samples/chinese_wall :

	  - Modified to add constraints.

	* kb/atom.cpp :

	  - Dupicates are not allowed.

2003-03-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.cpp :
	* kb/atom.h :

	  - Added get_*() functions.

	  - Added init_atom() to effectively copy the contents of a given
	    atom.

	* kb/expression.cpp :
	* kb/expression.h :

	  - Added a get() function.

	* kb/kb.cpp :
	* kb/kb.h :

	  - Added init table and add_inittab() function.

	* kb/symtab.cpp :
	* kb/symtab.h :

	  - Added a function to return the type of an identifier based on
	    the name.

	* parser/parser.y :

	  - Initial state atoms are now stored in kb.

	* kb/atom.cpp :
	* kb/atom.h :

	  - Added negate function.

	  - Added a print function for debugging.

	* kb/expression.cpp :
	* kb/expression.h :

	  - Added a print function for debugging.

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Fresh start. Took out code to encode and decode atoms to and
	    from an unsigned int.

2003-03-25  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/Makefile.in :
	* kb/kb.h :
	* kb/atom.h :
	* kb/atom.cpp :
	* kb/expression.h :
	* kb/expression.cpp :

	  - Added generic atom and expression classes to be used to
	    store both ground and non-ground expressions.
