@@ -17,6 +17,10 @@ class string : public list_item
     bool cmp(list_item *item);
     int init(const char *s);
     char *get();
+#ifdef DEBUG
+    /* assuming s has enough memory allocation */
+    void print(char *s);
+#endif
   private :
     char *str;
 } ;
@@ -35,6 +39,10 @@ class stringlist : public list
     int get(unsigned int i, char **s);
     /* return true if string is in the list */
     int find(const char *s);
+#ifdef DEBUG
+    /* assumimg s has enough memory allocation */
+    void print(char *s);
+#endif
 } ;
 
 #endif
